--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/christiandimitri/first-package/issues"
   },
-  "homepage": "https://github.com/christiandimitri/first-package#readme"
+  "homepage": "https://github.com/christiandimitri/first-package#readme",
+  "devDependencies": {
+    "three": "^0.141.0"
+  }
 }
